Adding list and tuples excersises

--- a/IBM Backend Practice (Python 1).ipynb
+++ b/IBM Backend Practice (Python 1).ipynb
@@ -492,6 +492,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tuples:\n",
+    "\n",
+    "Ratings = (0, 9, 6, 5, 10, 8, 9, 6, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 5, 6, 6, 8, 9, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sorting\n",
+    "\n",
+    "RatingsSorted = sorted(Ratings)\n",
+    "print(RatingsSorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample tuple\n",
+    "\n",
+    "genres_tuple = (\"pop\", \"rock\", \"soul\", \"hard rock\", \"soft rock\", \\\n",
+    "                \"R&B\", \"progressive rock\", \"disco\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(genres_tuple))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hard rock\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(genres_tuple[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('hard rock', 'soft rock', 'R&B')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(genres_tuple[3:6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('pop', 'rock')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(genres_tuple[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"disco\".find('s'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5, -3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "C_tuple=(-5, 1, -3)\n",
+    "C_list=sorted(C_tuple)\n",
+    "print(C_list)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
