--- a/IBM Backend Practice (Python 1).ipynb
+++ b/IBM Backend Practice (Python 1).ipynb
@@ -1,32 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Module 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, world!\n",
-      "17\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Hello, world!')\n",
-    "print ('17')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -641,6 +615,376 @@
     "C_tuple=(-5, 1, -3)\n",
     "C_list=sorted(C_tuple)\n",
     "print(C_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=(1,2,3,4,5)\n",
+    "\n",
+    "print(A[1:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([1,2,3]+[1,1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'key1': 1,\n",
+       " 'key2': '2',\n",
+       " 'key3': [3, 3, 3],\n",
+       " 'key4': (4, 4, 4),\n",
+       " 'key5': 5,\n",
+       " (0, 1): 6}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the dictionary\n",
+    "\n",
+    "Dict = {\"key1\": 1, \"key2\": \"2\", \"key3\": [3, 3, 3], \"key4\": (4, 4, 4), ('key5'): 5, (0, 1): 6}\n",
+    "Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dict[\"key 9\"] = 'xd'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'key1': 1,\n",
+       " 'key2': '2',\n",
+       " 'key3': [3, 3, 3],\n",
+       " 'key4': (4, 4, 4),\n",
+       " 'key5': 5,\n",
+       " (0, 1): 6,\n",
+       " 'key 9': 'xd'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(Dict['key 9'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'key1': 1,\n",
+       " 'key2': '2',\n",
+       " 'key3': [3, 3, 3],\n",
+       " 'key4': (4, 4, 4),\n",
+       " 'key5': 5,\n",
+       " (0, 1): 6}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "album_sales_dict={'Back in Black':50,'The Bodyguard':50,'Thriller':65}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Back in Black': 50, 'The Bodyguard': 50, 'Thriller': 65}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "album_sales_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "album_sales_dict['Thriller']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Back in Black', 'The Bodyguard', 'Thriller'])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "album_sales_dict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([50, 50, 65])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "album_sales_dict.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory={}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ProductNo1='Mobile Phone'\n",
+    "ProductNo1_Quantity=5\n",
+    "ProductNo1_Price=20000\n",
+    "ProductNo1_Release_Year=2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory['ProductNo1']=ProductNo1\n",
+    "inventory['ProductNo1_Quantity']=ProductNo1_Quantity\n",
+    "inventory['ProductNo1_Price']=ProductNo1_Price\n",
+    "inventory['ProductNo1_Release_Year']=ProductNo1_Release_Year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ProductNo1': 'Mobile Phone', 'ProductNo1_Quantity': 5, 'ProductNo1_Price': 20000, 'ProductNo1_Release_Year': 2020}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ProductNo2='Laptop'\n",
+    "ProductNo2_Quantity=10\n",
+    "ProductNo2_Price=50000\n",
+    "ProductNo2_Release_Year=2023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory['ProductNo2']=ProductNo2\n",
+    "inventory['ProductNo2_Quantity']=ProductNo2_Quantity\n",
+    "inventory['ProductNo2_Price']=ProductNo2_Price\n",
+    "inventory['ProductNo2_Release_Year']=ProductNo2_Release_Year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ProductNo1': 'Laptop', 'ProductNo1_Quantity': 10, 'ProductNo1_Price': 50000, 'ProductNo1_Release_Year': 2023, 'ProductNo2': 'Laptop', 'ProductNo2_Quantity': 10, 'ProductNo2_Price': 50000, 'ProductNo2_Release_Year': 2023}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'ProductNo1_Release_Year' in inventory\n",
+    "'ProductNo2_Release_Year' in inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(inventory['ProductNo1_Release_Year'])\n",
+    "del(inventory['ProductNo2_Release_Year'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ProductNo1': 'Laptop', 'ProductNo1_Quantity': 10, 'ProductNo1_Price': 50000, 'ProductNo2': 'Laptop', 'ProductNo2_Quantity': 10, 'ProductNo2_Price': 50000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inventory)"
    ]
   },
   {
