--- a/IBM Backend Practice (Python 1).ipynb
+++ b/IBM Backend Practice (Python 1).ipynb
@@ -989,6 +989,706 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dict={\"A\":1,\"B\":\"2\",\"C\":[3,3,3],\"D\":(4,4,4),'E':5,'F':6}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 4, 4)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dict[\"D\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C', 'D', 'E', 'F']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(Dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a'}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{'a','b'}&{'a'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A=((11,12),[21,22])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[21, 22]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B=((1),[2,3],[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L=['c','d']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L.append(['a','b'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['c', 'd', ['a', 'b']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 1.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "R=['Hard Rock',10,1.2]\n",
+    "del(R[0])\n",
+    "print(R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'a'=='A'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "cannot assign to literal here. Maybe you meant '==' instead of '='? (3293032332.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    1=2\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to literal here. Maybe you meant '==' instead of '='?\n"
+     ]
+    }
+   ],
+   "source": [
+    "1=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At position 0, I found a apple\n",
+      "At position 1, I found a banana\n",
+      "At position 2, I found a orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['apple', 'banana', 'orange']\n",
+    "for index,fruit in enumerate(fruits):\n",
+    "    print(f\"At position {index}, I found a {fruit}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-4\n",
+      "-3\n",
+      "-2\n",
+      "-1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(-4,5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rock\n",
+      "R&B\n",
+      "Soundtrack\n",
+      "R&B\n",
+      "soul\n",
+      "pop\n"
+     ]
+    }
+   ],
+   "source": [
+    "Genres=['rock', 'R&B', 'Soundtrack', 'R&B', 'soul','pop']\n",
+    "\n",
+    "for i in Genres:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9.5\n",
+      "10\n",
+      "8\n",
+      "7.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "PlayListRatings=[10,9.5,10,8,7.5,5,10,10]\n",
+    "i=0\n",
+    "Rating = PlayListRatings[0]\n",
+    "while (i<len(PlayListRatings) and Rating >= 6):\n",
+    "    print(Rating)\n",
+    "    i=i+1\n",
+    "    Rating=PlayListRatings[i]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['orange', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares=['orange','orange','purple','blue','orange']\n",
+    "new_squares=[]\n",
+    "i=0\n",
+    "while(i<len(squares) and squares[i]=='orange'):\n",
+    "    new_squares.append(squares[i])\n",
+    "    i=i+1\n",
+    "print(new_squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AA\n",
+      "BA\n",
+      "CA\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in ['A','B','C']:\n",
+    "    print(x+'A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Frequency of words is: {'Mary': 6, 'had': 2, 'a': 2, 'little': 3, 'lamb': 3, 'Little': 1, 'lamb,': 1, 'lamb.Its': 1, 'fleece': 1, 'was': 2, 'white': 1, 'as': 1, 'snow': 1, 'And': 1, 'everywhere': 1, 'that': 2, 'went': 3, 'went,': 1, 'Everywhere': 1, 'The': 1, 'sure': 1, 'to': 1, 'go': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python Program to Count words in a String using Dictionary\n",
+    "def freq(string):\n",
+    "    \n",
+    "    #step1: A list variable is declared and initialized to an empty list.\n",
+    "    words = []\n",
+    "    \n",
+    "    #step2: Break the string into list of words\n",
+    "    words = string.split() # or string.lower().split()\n",
+    "    \n",
+    "    #step3: Declare a dictionary\n",
+    "    Dict = {}\n",
+    "    \n",
+    "    #step4: Use for loop to iterate words and values to the dictionary\n",
+    "    for key in words:\n",
+    "        Dict[key] = words.count(key)\n",
+    "        \n",
+    "    #step5: Print the dictionary\n",
+    "    print(\"The Frequency of words is:\",Dict)\n",
+    "    \n",
+    "#step6: Call function and pass string in it\n",
+    "freq(\"Mary had a little lamb Little lamb, little lamb Mary had a little lamb.Its fleece was white as snow And everywhere that Mary went Mary went, Mary went \\\n",
+    "Everywhere that Mary went The lamb was sure to go\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No of arguments: 3\n",
+      "Horsefeather\n",
+      "Adonis\n",
+      "Bone\n",
+      "No of arguments: 4\n",
+      "Sidecar\n",
+      "Long Island\n",
+      "Mudslide\n",
+      "Carriage\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printAll(*args): # All the arguments are 'packed' into args which can be treated like a tuple\n",
+    "    print(\"No of arguments:\", len(args)) \n",
+    "    for argument in args:\n",
+    "        print(argument)\n",
+    "#printAll with 3 arguments\n",
+    "printAll('Horsefeather','Adonis','Bone')\n",
+    "#printAll with 4 arguments\n",
+    "printAll('Sidecar','Long Island','Mudslide','Carriage')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country: Canada\n",
+      "Province: Ontario\n",
+      "City: Toronto\n"
+     ]
+    }
+   ],
+   "source": [
+    "def printDictionary(**args):\n",
+    "    for key in args:\n",
+    "        print(key + \": \" + args[key])\n",
+    "\n",
+    "printDictionary(Country='Canada',Province='Ontario',City='Toronto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def div(a, b):\n",
+    "    return(a/b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "div(4,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def freq(string,passedkey):\n",
+    "    words = []\n",
+    "    words = string.split() # or string.lower().split()\n",
+    "    Dict = {}\n",
+    "    for key in words:\n",
+    "        if(key == passedkey):\n",
+    "            Dict[key] = words.count(key)\n",
+    "    print(\"The Frequency of words is:\",Dict)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Frequency of words is: {'little': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "freq(\"Mary had a little lamb Little lamb, little lamb Mary had a little lamb.Its fleece was white as snow And everywhere that Mary went Mary went, Mary went \\\n",
+    "Everywhere that Mary went The lamb was sure to go\",\"little\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(['A','B',1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([sum([1,1,1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L=[1,3,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1\n",
+      "b1\n",
+      "c1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_function(A):\n",
+    "    for a in A:\n",
+    "        print(a + '1')\n",
+    "print_function(['a', 'b', 'c'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Division by zero\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def safe_divide (numerator,denominator):    \n",
+    "    try:\n",
+    "        result = numerator / denominator\n",
+    "        return result\n",
+    "    except:\n",
+    "        print(\"Error: Division by zero\")\n",
+    "        return None\n",
+    "\n",
+    "numerator = int(input('Enter the numerator value: '))\n",
+    "denominator = int(input('Enter the denominator value: '))\n",
+    "\n",
+    "print(safe_divide(numerator,denominator))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def square_root(a):\n",
+    "    try:\n",
+    "        result = math.sqrt(a)\n",
+    "        return result\n",
+    "    except ValueError:\n",
+    "        print(\"Error: Invalid input! Please enter a positive integer or a float value.\")\n",
+    "    \n",
+    "a = float(input('Enter the number'))\n",
+    "print(square_root(a))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred during calculation: ZeroDivisionError\n",
+      "Message: float division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculation(num):\n",
+    "    try:\n",
+    "        result = num / (num-5)\n",
+    "        print (f'Result: {result}')\n",
+    "    except Exception as e:\n",
+    "        print(f'An error occurred during calculation: {type(e).__name__}')\n",
+    "        print(f'Message: {e}')\n",
+    "\n",
+    "num = float(input('Enter a number: '))\n",
+    "\n",
+    "calculation(num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1011,7 +1711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
